# razerz

./: CMakeLists.txt  README.md  gitup.sh  readME.md  train_with_teztu.mtl
Images_captures_&old_data/capturez/: vid.avi  vid.webm
Images_captures_&old_data/data_extrn/: readme.md
Images_captures_&old_data/data_extrn/ship_A3/: boat_Base2.ply
Images_captures_&old_data/data_extrn/text_display/: base_text_display.xml
Images_captures_&old_data/images_ofprogress/: gen_seniak_tres_treez_whpisz_smog.tiff
cmake/: FindFreetype.cmake  FindGLFW.cmake  FindGLM.cmake
data_extrn/: DEFUL_file_list_texture.xml  train_with_teztu.mtl
data_extrn/neil/: build_fracute_cellz.blend  car01.mtl  car03.mtl  rail_strate_base_01.blend1  train01.mtl
data_extrn/ship_A3/: boat_Base.ply  boat_Base2.abc
engine_SDL_opengl/: README.md  a.out  dod_entites.cpp  engine_MCP.cpp  engine_MCP.hpp  low_level_lib.hpp  main.cpp  modual_tst.cxx  opengl_lib.cpp  opengl_lib.hpp  renderer_MCP.hpp  static_interface.hpp  thread_lib_base.hpp
engine_SDL_opengl/gcm.cache/: hello.gcm  test_mod.gcm
engine_openGL/: CMakeLists.txt  readME.md
engine_openGL/buils2/: CMakeCache.txt
engine_openGL/data_extrn/neil/: Train_centerd_01.mtl  filelistNEIL_obj.xml  rail_strate_base_01.blend  rail_strate_base_01.mtl
engine_openGL/installinfo/: fresh_history_manual.txt
engine_openGL/source/: readME.md
engine_openGL/source/MCP_cmd/: arragmentz.hpp  écouterions_resourcer_CMD.hpp
engine_openGL/source/basez/: cpp_libz_base.hpp  errorhandler.hpp  io_utilityz.cpp  mathII.hpp  opengl_utilityz.hpp  shader_lib.cpp  shader_lib.hpp  sym_object.cpp  sym_object.hpp  texture.hpp
engine_openGL/source/extentionz/: pars_hash.hpp
engine_openGL/source/parserz/: asset_rez_listz.hpp  geometry_parser.cpp  geometry_parser.hpp  parse_table_ref.h  parserlib.cpp  parserlib.hpp  readme.md  shader_parser.hpp
engine_openGL/source/scene_gen/: e_modifers_presetz.xml  emission_meterial_attr_A.xml
engine_openGL/source/ttestz/: CMakeLists.txt  log_sym_obj.txt  sysm_test.cpp
gui/: fluid_gui_opengl
installinfo/: SETUP.txt
landingz_0.02/: .~lock.info_onfltk.odt#  complieline.txt  info_onfltk.odt  infoz  land_test.out  main_landzETgui_t.cpp
landingz_0.02/MCP_cmd/: landingz_engine.cpp  landingz_engine.hpp  openGL_CMDer.hpp
landingz_0.02/MCP_cmd/basez/: engine_enum_defz.hpp  errorhandler.hpp  flag_templatez.hpp
landingz_0.02/graphicz/: gl_ctlr.cpp  gl_ctlr.hpp  gl_graphic.hpp  gui_opengl_uility.cpp  gui_opengl_uility.hpp  soild_state_data.hpp  vulkan.hpp
landingz_0.02/graphicz/gui/: base_h.hpp  fl_base.cpp
landingz_0.02/graphicz/shader_ctr/: opengl_shader_base.hpp
landingz_0.02/landingz_modual/: landingz_sql_db_cmd.cpp  landingz_sql_db_cmd.hpp  mem_reader.cpp  mem_reader.hpp  mmf_handler.cpp  mmf_handler.hpp  sql_hardcode.hpp  utilityz_header_ldingz.hpp
landingz_0.02/workbench_gui/: mocup_flud.cpp  workbench_fluid_landingz  workbench_fluid_landingz.cxx  workbench_fluid_landingz.h
level_builder/: a.out  fltkcompleline.rm  smape_Ed.cxx  smape_Ed.h  world_conversion_tool.cpp
oubaoun_razzwer/NEIL_IMPORT/: tree02yellow.mtl
outtvz/: sepiz_prozzoar_cour
shaderzglsl/: gl_shader_list.lst_dat  other_shaders.xml
shaderzglsl/elemental/compute_partical/: compute_expanse_BASE_A.glsl  frag_partical_BASE_A.glsl  vertex_partical_BASE_A.glsl
shaderzglsl/elemental/compute_partical (copy)/: compute_expanse_BASE_A.comp  frag_partical_BASE_A.frag  vertex_partical_BASE_A.vert
shaderzglsl/elemental/shadowz/: frag_omn_drec_shadow_A.glsl  frag_render_with_omn.glsl  geom_omn_drec_shadow_A.glsl  vertex_omn_drec_shadow_A.vs
shaderzglsl/elemental/terrain/: tessctrl_terran_A.glsl  (+1 more)
shaderzglsl/modelz/: frag_ai_model_A.glsl
shaderzglsl/precomplied/: comp_computepartical_A.spv  frag_computepartical_A.spv  frag_glyph_A.spv  vert_computepartical_A.spv  vert_glyph_A.spv
source/: CMakeLists.txt
source/MCP_cmd/: engine.cpp  engine.hpp  mcp_lib.hpp  periphery_input.cpp  periphery_input.hpp  shader_pipeline_CMD.cpp
source/basez/: cpp_libz_base.hpp  errorhandler.hpp  gl_lib_z.hpp  io_utilityz.cpp  io_utilityz.hpp  lenz.hpp  lighting_lib.hpp  mathz.hpp  opengl_utilityz.cpp  opengl_utilityz.hpp  shader_lib.hpp  texture.cpp  texture.hpp
source/modualz/agentz/: agent_decision_component.hpp  agent_sensor_memorx.cpp  agent_sensor_memorx.hpp
source/modualz/committee/: shadowz.hpp  simula_entity.hpp
source/modualz/geometry/: assimp_model.cpp  assimp_model.hpp  geometry.cpp  geometry.hpp  terrain.hpp
source/modualz/milieu/: effectz.hpp  partical_env.cpp
source/modualz/phyziz/: bullet_collision.cpp  bullet_collision.hpp  collision_AI.hpp  pysic_lib.hpp
source/parserz/: parserlib.cpp  parserlib.hpp  shader_parser.cpp  shader_parser.hpp
source/scene_gen/: solestial_lighting_A.xml
source/shaderzglsl/elemental/compute_partical/: frag_partical_BASE_A.glsl
source/shaderzglsl/elemental/terrain/: frag_terran_A.glsl  tesseval_terran_A.glsl
source/shaderzglsl/modelz/: frag_ai_model_A.glsl  frag_shader_lightC.glsl  vertex_ai_model_A.glsl
source/ttestz/: a.out  func_par_test.cpp  sysm_test.cpp
vulkan_modual_01.01/: CMakeLists.txt  Makefile  README.md  shader dscprtior short.info  shader_build_info.info  shader_complie.sh  smtest.out
vulkan_modual_01.01/complie_bitz/: CMakeLists.txt  Makefile  l_build.sh  makeback.mk  oldCMakeLists.txt  win_Build.bat
vulkan_modual_01.01/headers/: buffers.hpp  discrptoz.hpp  exrtn_vulkan.hpp  flag_templatez.hpp  partical_lib.hpp  vk_abstracionz.hpp  vk_debug.hpp  vk_shaderz.hpp  vulkan_api.hpp  vulkan_definz.hpp  vulkani_strucz.hpp
vulkan_modual_01.01/l_build/: old_shader
vulkan_modual_01.01/src/: exrtn_vulkan.cpp  main.cpp  partical_lib.cpp  render_linux.cpp  swap_chain.cpp  vk_abstracionz.cpp  vk_shaderz.cpp  vulkan_api.cpp
vulkan_modual_01.02/: Makefile
vulkan_modual_01.02/headerz/: exrtn_vulkan.hpp  flag_templatez.hpp  lenz_vk.hpp  scene.hpp  symz.hpp  vk_defintions.hpp  vk_structz.hpp  vulkan_api_02.hpp  vulkan_app.hpp
vulkan_modual_01.02/src/: main.cpp  scene.cpp  symz.cpp  vulkan_app.cpp
(+87 files in other folders)
